src/objects/Schedule_Templates__c.object
<CustomObject>
    <description>Table that holds the consult scheduling templates we have set up. A template can be assigned to a consult room in order to build the inventory on an ongoing basis</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if the template is active or not</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Friday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the template is active on Fridays</description>
        <label>Friday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the template is active on Mondays</description>
        <label>Monday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Saturday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the template is active on Saturday</description>
        <label>Saturday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sunday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the template is active on Sundays</description>
        <label>Sunday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Thursday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the template is active on Thursdays</description>
        <label>Thursday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tuesday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the template is active on Tuesdays</description>
        <label>Tuesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wednesday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the template is active on Wednesdays</description>
        <label>Wednesday</label>
        <type>Checkbox</type>
    </fields>
    <label>Schedule Template</label>
    <nameField>
        <label>Schedule Templates Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schedule Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>